# pyarrow-pandas-flattener

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-development.txt  requirements.txt
pyarrow_pandas/: __init__.py  pyarrow_pandas_converter.py
pyarrow_pandas/tests/: test_sanity.py
